# stickerbook

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml  unittest.cfg
notebooks/: sticker_book_puzzle.ipynb  stickerbook_espend.ipynb
puzzle/: input.txt
puzzle_solver/puzzle/: solver.py  utils.py
scripts/: main.py
stickerbook/: main.py
stickerbook/inputs/: puzzle_str.txt
stickerbook/puzzle/: solver.py  utils.py
stickerbook_puzzle_solver/application/: cli_app.py
stickerbook_puzzle_solver/domain/: stickerbook_puzzle.py
test/common/: test_input.txt
test/e2e/: test_stickerbook_puzzle.py
test/unit/: test_equation_lhs.py  test_stickerbook_puzzle.py
test/unit/domain/: test_equation_lhs.py  test_stickerbook_puzzle.py
